<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
    tools:context="com.example.devanshgandhi.mediu_doctor.Profile">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:orientation="horizontal">
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/image_profile"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/default_avatar"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>
    <!--<ImageView-->

    <!--android:layout_width="100dp"-->
    <!--android:layout_height="100dp"-->
    <!--android:adjustViewBounds="true"-->
    <!--android:id="@+id/image_profile"-->
    <!--android:layout_alignParentTop="true"-->

    <!--android:layout_marginLeft="20dp"-->
    <!--android:src="@drawable/default_avatar" />-->


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="13dp" >


        <EditText
            android:id="@+id/etFirstname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/image_profile"
            android:layout_toRightOf="@+id/image_profile"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etLastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/image_profile"
            android:layout_alignParentEnd="true"

            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/image_profile"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName" />

    </LinearLayout>

</LinearLayout>

<EditText

    android:id="@+id/etEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/image_profile"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="16dp"
    android:hint="@string/email"
    android:inputType="textEmailAddress"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:textAppearance="?android:attr/textAppearanceMedium" />


<EditText

    android:id="@+id/etMobile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/edittext_email"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="16dp"
    android:hint="@string/phone"
    android:inputType="phone"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<EditText

    android:id="@+id/etAge"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/edittext_phone"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="16dp"
    android:hint="@string/age"
    android:inputType="date"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<EditText

    android:id="@+id/etDob"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/edittext_dob"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="16dp"
    android:hint="@string/dob"
    android:inputType="numberDecimal"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<EditText

    android:id="@+id/etAddress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/edittext_age"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="16dp"
    android:hint="@string/address"
    android:inputType="textPostalAddress"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:textAppearance="?android:attr/textAppearanceMedium" />


<RadioGroup

    android:id="@+id/radiogroup_gender"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="left"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:layout_below="@+id/edittext_address"
    >

    <RadioButton

        android:id="@+id/radiobutton_male"
        android:text="Male"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <RadioButton

        android:text="Female"
        android:id="@+id/radiobutton_female"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="gravity"
        android:layout_marginLeft="40dp"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</RadioGroup>

<Button
    android:id="@+id/saveButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:background="#08ad60"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_margin="15dp"
    android:text="Save" />

</LinearLayout>