<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.devanshgandhi.mediu_doctor.Chat">
    

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".Home"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border1">

                <TextView
                    android:id="@+id/chat"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:textColor="#000"
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="20sp"
                    android:layout_marginBottom="5sp"
                    android:layout_marginRight="5sp"
                    android:text="@string/message"
                    android:textSize="28sp"
                    android:paddingTop="5sp"

                    />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="80sp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20sp"
                    android:src="@drawable/sms" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="22sp"
                    android:text="@string/nom" />

                <Button
                    android:layout_width="236dp"
                    android:layout_height="wrap_content"
                    android:background="#08ad60"
                    android:padding="15sp"
                    android:text="@string/ask"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
